--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
+  "homepage": "https://0xnunomiranda.github.io/React-Native-ImHere",
   "name": "imhere",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "expo": "~51.0.5",
