--- a/package.json
+++ b/package.json
@@ -1,3 +1,32 @@
+  {
+    "homepage": "https://0xnunomiranda.github.io/React-Native-ImHere",
+    "name": "imhere",
+    "version": "1.0.0",
+    "main": "expo/AppEntry.js",
+    "scripts": {
+      "build": "expo export --platform web",  
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+      "@expo/metro-runtime": "~3.2.1",
+      "expo": "~51.0.5",
+      "expo-status-bar": "~1.12.1",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-native": "0.74.1",
+      "react-native-web": "~0.19.10"
+    },
+    "devDependencies": {
+      "@babel/core": "^7.20.0",
+      "@types/react": "~18.2.45",
+      "@types/react-native": "^0.73.0",
+      "gh-pages": "^6.3.0",
+      "typescript": "^5.1.3"
+    },
+    "private": false
+  }
+=======
 {
   "homepage": "https://0xnunomiranda.github.io/React-Native-ImHere",
   "name": "imhere",
